load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_python//python:defs.bzl", "py_binary")

# gazelle:exclude shared
# gazelle:proto disable

package(default_visibility = ["//cli:__subpackages__"])

proto_library(
    name = "qaihm_proto",
    srcs = glob([
        "*.proto",
        "shared/*.proto",
    ]),
    strip_import_prefix = "/cli/internal/qaihm",
)

go_proto_library(
    name = "qaihm",
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/qaihm",
    proto = ":qaihm_proto",
)

# Run `bazelisk run //cli/internal/qaihm:gen_pb_go` to generate .pb.go files for development use.
# These are not used in the build, but are needed for development and debugging.
filegroup(
    name = "_qaihm_pb_go_srcs",
    srcs = [":qaihm"],
    output_group = "go_generated_srcs",
)

write_file(
    name = "_gen_pb_go_src",
    out = "gen_pb_go.py",
    content = [
        "import os, shutil",
        "from pathlib import Path",
        "dst = Path(os.environ['BUILD_WORKSPACE_DIRECTORY']) / 'cli/internal/qaihm'",
        "for p in dst.glob('*.pb.go'): p.unlink()",
        "root = Path(os.environ.get('RUNFILES_DIR') or os.path.dirname(__file__) + '.runfiles')",
        "for src in root.rglob('*.pb.go'): shutil.copyfile(src, dst / src.name)",
    ],
)

py_binary(
    name = "gen_pb_go",
    srcs = [":_gen_pb_go_src"],
    data = [":_qaihm_pb_go_srcs"],
)

write_file(
    name = "_clean_pb_go_src",
    out = "clean_pb_go.py",
    content = [
        "import os",
        "from pathlib import Path",
        "dst = Path(os.environ['BUILD_WORKSPACE_DIRECTORY']) / 'cli/internal/qaihm'",
        "for p in dst.glob('*.pb.go'): p.unlink()",
    ],
)

py_binary(
    name = "clean_pb_go",
    srcs = [":_clean_pb_go_src"],
)
