load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "readline",
    srcs = [
        "action.go",
        "buffer.go",
        "history.go",
        "readline.go",
        "terminal.go",
        "terminal_darwin.go",
        "terminal_linux.go",
        "terminal_windows.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/internal/readline",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "@com_github_mattn_go_runewidth//:go-runewidth",
        "@org_golang_x_term//:term",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)
