load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "record",
    srcs = [
        "record.go",
        "stream_record.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/record",
    visibility = ["//cli:__subpackages__"],
)

go_test(
    name = "record_test",
    srcs = ["package_test.go"],
    embed = [":record"],
)
