load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "render",
    srcs = [
        "progressbar.go",
        "spinner.go",
        "theme.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/internal/render",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "@com_github_charmbracelet_huh_spinner//:spinner",
        "@com_github_gookit_color//:color",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)

go_test(
    name = "render_test",
    srcs = ["theme_test.go"],
    embed = [":render"],
)
