load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "store",
    srcs = [
        "config.go",
        "manager.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/store",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "@com_github_bytedance_sonic//:sonic",
    ],
)

go_test(
    name = "store_test",
    srcs = ["package_test.go"],
    embed = [":store"],
)
