load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":dedup_tar.bzl", "dedup_tar")

package(default_visibility = ["//visibility:public"])

exports_files([
    "trixie.yaml",
    "trixie.lock.json",
])

# package geniex files

pkg_tar(
    name = "_geniex_files",
    srcs = ["//cli:_artifact"],
    package_dir = "/opt/geniex",
)

pkg_tar(
    name = "_geniex_symlinks",
    empty_dirs = ["/data"],
    mode = "0755",
    symlinks = {
        "/usr/local/bin/geniex": "/opt/geniex/geniex",
        "/root/.cache/geniex": "/data",
    },
)

# Qualcomm user-space libs aren't on Debian; bind-mount host /usr/lib onto
# /opt/qcom-lib at runtime. These symlinks route ld.so's default search
# path to the mount.
_QCOM_LIBS = [
    "libOpenCL.so.1",
    "libOpenCL_adreno.so.1",
    "libCB.so.1",
    "libadreno_utils.so.1",
    "libgsl.so.1",
    "libllvm-qcom.so.1",
    "libllvm-qgl.so.1",
    "libllvm-glnext.so.1",
    "libpropertyvault.so.0.0.0",
    "libdmabufheap.so.0.0.0",
    "libcdsprpc.so.1.0.0",
]

# Unversioned aliases for libs dlopen'd by short name.
_QCOM_SHORT_ALIASES = {
    "libOpenCL_adreno.so":  "libOpenCL_adreno.so.1",
    "libCB.so":             "libCB.so.1",
    "libadreno_utils.so":   "libadreno_utils.so.1",
    "libgsl.so":            "libgsl.so.1",
    "libllvm-qcom.so":      "libllvm-qcom.so.1",
    "libllvm-qgl.so":       "libllvm-qgl.so.1",
    "libllvm-glnext.so":    "libllvm-glnext.so.1",
    "libpropertyvault.so.0": "libpropertyvault.so.0.0.0",
    "libdmabufheap.so.0":    "libdmabufheap.so.0.0.0",
    "libcdsprpc.so":         "libcdsprpc.so.1.0.0",
    "libcdsprpc.so.1":       "libcdsprpc.so.1.0.0",
}

pkg_tar(
    name = "_qcom_symlinks",
    mode = "0755",
    symlinks = dict(
        [
            ("/usr/lib/" + name, "/opt/qcom-lib/" + name)
            for name in _QCOM_LIBS
        ] + [
            ("/usr/lib/" + alias, target)
            for alias, target in _QCOM_SHORT_ALIASES.items()
        ],
    ),
)

# package image

dedup_tar(
    name = "apt_layer",
    tars = ["@trixie"],
)

genrule(
    name = "_ca_bundle",
    srcs = [":apt_layer"],
    outs = ["ca-certificates.crt"],
    cmd = "tar -xOf $(location :apt_layer) --wildcards './usr/share/ca-certificates/mozilla/*.crt' > $@",
)

pkg_tar(
    name = "_ca_bundle_layer",
    srcs = [":_ca_bundle"],
    package_dir = "/etc/ssl/certs",
)

oci_image(
    name = "image",
    base = select({
        "@platforms//cpu:x86_64": "@debian_linux_amd64",
        "@platforms//cpu:arm64": "@debian_linux_arm64_v8",
    }),
    entrypoint = ["/opt/geniex/geniex"],
    env = {"LD_LIBRARY_PATH": "/opt/geniex"},
    exposed_ports = ["18181/tcp"],
    labels = {
        "org.opencontainers.image.title": "GenieX-CLI",
        "org.opencontainers.image.description": "GenieX-CLI for running multi models",
        "org.opencontainers.image.vendor": "GenieX",
    },
    tars = [
        ":apt_layer",
        ":_ca_bundle_layer",
        ":_qcom_symlinks",
        ":_geniex_files",
        ":_geniex_symlinks",
    ],
)

genrule(
    name = "_repo_tags",
    outs = ["repo_tags.txt"],
    cmd = "echo ghcr.io/qcom-ai-hub/geniex-cli:latest > $@ && echo ghcr.io/qcom-ai-hub/geniex-cli:$(VERSION) >> $@",
)

oci_load(
    name = "docker",
    image = ":image",
    repo_tags = ":_repo_tags",
)

# export tarball

filegroup(
    name = "_docker_tarball",
    srcs = [":docker"],
    output_group = "tarball",
)

copy_file(
    name = "docker_tarball",
    src = ":_docker_tarball",
    out = "geniex-cli-docker.tar",
    allow_symlink = True,
)

alias(
    name = "linux",
    actual = ":docker_tarball",
)
