load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load(":dedup_tar.bzl", "dedup_tar")

package(default_visibility = ["//visibility:public"])

exports_files([
    "trixie.yaml",
    "trixie.lock.json",
])

# package geniex files

pkg_tar(
    name = "_geniex_files",
    srcs = ["//cli:_artifact"],
    package_dir = "/opt/geniex",
)

pkg_tar(
    name = "_geniex_symlinks",
    empty_dirs = ["/data"],
    mode = "0755",
    symlinks = {
        "/usr/local/bin/geniex": "/opt/geniex/geniex",
        "/root/.cache/geniex": "/data",
    },
)

# Qualcomm user-space libs aren't on Debian; bind-mount host /usr/lib onto
# /opt/qcom-lib at runtime. entrypoint.sh symlinks each known QCOM lib
# into /opt/geniex at container start, since their host layout varies
# (top-level on EVK, aarch64-linux-gnu/ on stock Ubuntu).
pkg_tar(
    name = "_geniex_entrypoint",
    srcs = ["entrypoint.sh"],
    mode = "0755",
    package_dir = "/opt/geniex",
)

# package image

dedup_tar(
    name = "apt_layer",
    target_compatible_with = ["@platforms//os:linux"],
    tars = ["@trixie"],
)

genrule(
    name = "_ca_bundle",
    srcs = [":apt_layer"],
    outs = ["ca-certificates.crt"],
    cmd = "tar -xOf $(location :apt_layer) --wildcards './usr/share/ca-certificates/mozilla/*.crt' > $@",
    target_compatible_with = ["@platforms//os:linux"],
)

pkg_tar(
    name = "_ca_bundle_layer",
    srcs = [":_ca_bundle"],
    package_dir = "/etc/ssl/certs",
    target_compatible_with = ["@platforms//os:linux"],
)

oci_image(
    name = "image",
    base = select({
        "@platforms//cpu:x86_64": "@debian_linux_amd64",
        "@platforms//cpu:arm64": "@debian_linux_arm64_v8",
    }),
    entrypoint = ["/opt/geniex/entrypoint.sh"],
    env = {"LD_LIBRARY_PATH": "/opt/geniex"},
    exposed_ports = ["18181/tcp"],
    labels = {
        "org.opencontainers.image.title": "GenieX-CLI",
        "org.opencontainers.image.description": "GenieX-CLI for running multi models",
        "org.opencontainers.image.vendor": "GenieX",
    },
    target_compatible_with = ["@platforms//os:linux"],
    tars = [
        ":apt_layer",
        ":_ca_bundle_layer",
        ":_geniex_files",
        ":_geniex_entrypoint",
        ":_geniex_symlinks",
    ],
)

genrule(
    name = "_repo_tags",
    outs = ["repo_tags.txt"],
    cmd = "echo docker.io/qualcomm/geniex:latest > $@ && echo docker.io/qualcomm/geniex:$(VERSION) >> $@",
    target_compatible_with = ["@platforms//os:linux"],
)

oci_load(
    name = "docker",
    image = ":image",
    repo_tags = ":_repo_tags",
    target_compatible_with = ["@platforms//os:linux"],
)

# export tarball

filegroup(
    name = "_docker_tarball",
    srcs = [":docker"],
    output_group = "tarball",
    target_compatible_with = ["@platforms//os:linux"],
)

copy_file(
    name = "docker_tarball",
    src = ":_docker_tarball",
    out = "geniex-cli-docker.tar",
    allow_symlink = True,
    target_compatible_with = ["@platforms//os:linux"],
)

alias(
    name = "linux",
    actual = ":docker_tarball",
    target_compatible_with = ["@platforms//os:linux"],
)
