load(":iss_manifest.bzl", "iss_manifest")

iss_manifest(
    name = "_artifact_iss",
    src = "//cli:_artifact",
)

genrule(
    name = "windows_installer",
    srcs = [
        "geniex-cli-setup.iss",
        "geniex.ico",
        ":_artifact_iss",
    ],
    outs = ["geniex-cli-setup.exe"],
    cmd_bat = " ".join([
        "$(location @innosetup//:iscc) /Q",
        '"/O$(@D)"',
        '"/DVersion=$(VERSION)"',
        '"/DSrcRoot=%CD%"',
        '"/DArtifactIss=%CD%\\$(RULEDIR)\\_artifact_iss.iss"',
        '"$(location geniex-cli-setup.iss)"',
    ]),
    target_compatible_with = ["@platforms//os:windows"],
    tools = ["@innosetup//:iscc"],
)

alias(
    name = "windows",
    actual = ":windows_installer",
)
