load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "chat.go",
        "model.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/server/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "//cli/internal/model_hub",
        "//cli/internal/store",
        "//cli/internal/types",
        "//cli/server/service",
        "//cli/server/utils",
        "@com_github_bytedance_sonic//:sonic",
        "@com_github_bytedance_sonic//ast",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_openai_openai_go_v3//:openai-go",
        "@com_github_openai_openai_go_v3//packages/param",
        "@com_github_openai_openai_go_v3//shared/constant",
    ],
)
