load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//scripts:cgo_test.bzl", "go_cgo_test")

go_library(
    name = "handler",
    srcs = [
        "chat.go",
        "model.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/server/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "//cli/internal/types",
        "//cli/server/service",
        "//cli/server/utils",
        "@com_github_bytedance_sonic//:sonic",
        "@com_github_bytedance_sonic//ast",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_openai_openai_go_v3//:openai-go",
        "@com_github_openai_openai_go_v3//packages/param",
        "@com_github_openai_openai_go_v3//shared/constant",
    ],
)

go_cgo_test(
    name = "handler_test",
    srcs = ["package_test.go"],
    embed = [":handler"],
)
