load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = [
        "auth.go",
        "cors.go",
        "gil.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/server/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/internal/config",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_test(
    name = "middleware_test",
    srcs = ["package_test.go"],
    embed = [":middleware"],
)
