load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//scripts:cgo_test.bzl", "go_cgo_test")

go_library(
    name = "service",
    srcs = [
        "keepalive.go",
        "service.go",
    ],
    importpath = "github.com/qualcomm/GenieX/cli/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "//cli/internal/config",
        "//cli/internal/types",
    ],
)

go_cgo_test(
    name = "service_test",
    srcs = ["keepalive_test.go"],
    embed = [":service"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "@com_github_spf13_viper//:viper",
    ],
)
