load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utils",
    srcs = ["common.go"],
    importpath = "github.com/qcom-it-nexa-ai/geniex/server/utils",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_image//webp"],
)

go_test(
    name = "utils_test",
    srcs = ["common_test.go"],
    embed = [":utils"],
)
