load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "console_other.go",
        "console_windows.go",
        "error.go",
        "log.go",
        "process.go",
        "repl.go",
        "util_linux.go",
        "util_windows.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/cmd/geniex/common",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "//cli/internal/config",
        "//cli/internal/model_hub",
        "//cli/internal/readline",
        "//cli/internal/render",
        "//cli/internal/store",
        "@com_github_bytedance_sonic//:sonic",
        "@com_github_lmittmann_tint//:tint",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "common_test",
    srcs = ["process_test.go"],
    embed = [":common"],
)
