load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//scripts:cgo_test.bzl", "go_cgo_test")

go_library(
    name = "common",
    srcs = [
        "console_other.go",
        "console_windows.go",
        "error.go",
        "log.go",
        "process.go",
        "repl.go",
        "sdk.go",
        "util_linux.go",
        "util_windows.go",
    ],
    importpath = "github.com/qualcomm/GenieX/cli/cmd/geniex/common",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "//cli/internal/config",
        "//cli/internal/readline",
        "//cli/internal/render",
        "//cli/internal/store",
        "@com_github_bytedance_sonic//:sonic",
        "@com_github_lmittmann_tint//:tint",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_cgo_test(
    name = "common_test",
    srcs = [
        "error_test.go",
        "process_test.go",
    ],
    embed = [":common"],
)
